--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
+    "axios": "^1.7.7",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-phone-input": "^1.3.7",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
