--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.0.6",
+    "@notifee/react-native": "^9.1.3",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
+    "@stream-io/react-native-webrtc": "^118.1.2",
+    "@stream-io/video-react-native-sdk": "^1.4.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "expo": "~52.0.11",
+    "expo-build-properties": "^0.13.1",
+    "expo-clipboard": "^7.0.0",
+    "expo-file-system": "^18.0.4",
+    "expo-image-picker": "^16.0.3",
     "expo-location": "^18.0.2",
+    "expo-media-library": "^17.0.3",
     "expo-status-bar": "~2.0.0",
+    "peerjs": "^1.5.4",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-async-storage": "^0.0.1",
@@ -28,12 +38,13 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-phone-input": "^1.3.7",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-vector-icons": "^10.2.0",
     "semobleapp": "file:",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "expo-dev-client": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
