--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "semobleapp",
+  "name": "Red Cross Emergency Response",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,42 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^9.0.0",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@notifee/react-native": "^9.1.3",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
     "@stream-io/react-native-webrtc": "^118.1.2",
     "@stream-io/video-react-native-sdk": "^1.4.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "expo": "~52.0.11",
-    "expo-build-properties": "^0.13.1",
-    "expo-clipboard": "^7.0.0",
-    "expo-file-system": "^18.0.4",
-    "expo-image-picker": "^16.0.3",
-    "expo-location": "^18.0.2",
-    "expo-media-library": "^17.0.3",
-    "expo-status-bar": "~2.0.0",
-    "peerjs": "^1.5.4",
-    "react": "18.3.1",
-    "react-native": "0.76.3",
+    "expo": "^51.0.0",
+    "expo-build-properties": "~0.12.5",
+    "expo-clipboard": "~6.0.3",
+    "expo-dev-client": "~4.0.29",
+    "expo-file-system": "~17.0.1",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.5",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-incall-manager": "^4.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-phone-input": "^1.3.7",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.3.0",
-    "react-native-vector-icons": "^10.2.0",
-    "semobleapp": "file:",
+    "react-native-svg": "15.2.0",
     "socket.io-client": "^4.8.1",
-    "expo-dev-client": "~5.0.4"
+    "stream-chat-expo": "^5.43.1",
+    "stream-chat-react-native": "^5.43.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
