--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@notifee/react-native": "^9.1.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/netinfo": "11.3.1",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
     "@stream-io/react-native-webrtc": "^118.1.2",
