--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-clipboard": "~6.0.3",
     "expo-dev-client": "~4.0.29",
+    "expo-document-picker": "^13.0.1",
     "expo-file-system": "~17.0.1",
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.7",
@@ -40,6 +41,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-incall-manager": "^4.2.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.20.1",
     "react-native-phone-input": "^1.3.7",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.16.3",
